log
Fri May 13 15:40:07 UTC 2022: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:25: error: comparison between pointer and integer [-Werror]
         if(n->sudo[i][j]=="0")
                         ^~
sudoku.c:61:25: error: comparison with string literal results in unspecified behavior [-Werror=address]
sudoku.c:64:28: error: passing argument 1 of ‘copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
           adn_j->sudo=copy(n->sudo,9);
                            ^
sudoku.c:15:7: note: expected ‘Node * {aka struct <anonymous> *}’ but argument is of type ‘int (*)[9]’
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:23: error: too many arguments to function ‘copy’
           adn_j->sudo=copy(n->sudo,9);
                       ^~~~
sudoku.c:15:7: note: declared here
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:22: error: assignment to expression with array type
           adn_j->sudo=copy(n->sudo,9);
                      ^
sudoku.c:66:11: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
           push_back(list, adn_j);
           ^~~~~~~~~
           pushBack
cc1: all warnings being treated as errors
Compilation failed
81d8e34
Fri May 13 15:40:18 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:25: error: comparison between pointer and integer [-Werror]
         if(n->sudo[i][j]=="0")
                         ^~
sudoku.c:61:25: error: comparison with string literal results in unspecified behavior [-Werror=address]
sudoku.c:64:28: error: passing argument 1 of ‘copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
           adn_j->sudo=copy(n->sudo,9);
                            ^
sudoku.c:15:7: note: expected ‘Node * {aka struct <anonymous> *}’ but argument is of type ‘int (*)[9]’
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:23: error: too many arguments to function ‘copy’
           adn_j->sudo=copy(n->sudo,9);
                       ^~~~
sudoku.c:15:7: note: declared here
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:22: error: assignment to expression with array type
           adn_j->sudo=copy(n->sudo,9);
                      ^
cc1: all warnings being treated as errors
Compilation failed
129fce7
Fri May 13 15:41:16 UTC 2022: 
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:25: error: comparison between pointer and integer [-Werror]
         if(n->sudo[i][j]=="0")
                         ^~
sudoku.c:61:25: error: comparison with string literal results in unspecified behavior [-Werror=address]
sudoku.c:64:28: error: passing argument 1 of ‘copy’ from incompatible pointer type [-Werror=incompatible-pointer-types]
           adn_j->sudo=copy(n->sudo,9);
                            ^
sudoku.c:15:7: note: expected ‘Node * {aka struct <anonymous> *}’ but argument is of type ‘int (*)[9]’
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:23: error: too many arguments to function ‘copy’
           adn_j->sudo=copy(n->sudo,9);
                       ^~~~
sudoku.c:15:7: note: declared here
 Node* copy(Node* n){
       ^~~~
sudoku.c:64:22: error: assignment to expression with array type
           adn_j->sudo=copy(n->sudo,9);
                      ^
cc1: all warnings being treated as errors
Compilation failed
af4dfc3
Sat May 14 17:46:17 UTC 2022: 
 sudoku.c | 16 +---------------
 1 file changed, 1 insertion(+), 15 deletions(-)
 tests:  0|5
total_score: 0/70
861cab9
Sun May 15 04:30:24 UTC 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:19: error: statement with no effect [-Werror=unused-value]
       Adj->sudo[i][j];
       ~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
ed383c3
Sun May 15 04:30:43 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
30d3eb4
Sun May 15 04:44:48 UTC 2022: 
 sudoku.c | 53 ++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 52 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘vacio’:
sudoku.c:51:7: error: ‘check’ undeclared (first use in this function)
       check[i]=0;
       ^~~~~
sudoku.c:51:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c: In function ‘is_valid’:
sudoku.c:94:22: error: ‘k’ undeclared (first use in this function)
         int i = 3 * (k / 3) + (p / 3);
                      ^
sudoku.c:94:32: error: ‘p’ undeclared (first use in this function)
         int i = 3 * (k / 3) + (p / 3);
                                ^
sudoku.c:95:13: error: unused variable ‘j’ [-Werror=unused-variable]
         int j = 3 * (k % 3) + (p % 3);
             ^
sudoku.c:94:13: error: unused variable ‘i’ [-Werror=unused-variable]
         int i = 3 * (k / 3) + (p / 3);
             ^
cc1: all warnings being treated as errors
Compilation failed
dc490cc
Sun May 15 04:46:00 UTC 2022: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘vacio’:
sudoku.c:51:7: error: ‘check’ undeclared (first use in this function)
       check[i]=0;
       ^~~~~
sudoku.c:51:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c: In function ‘is_valid’:
sudoku.c:94:22: error: ‘k’ undeclared (first use in this function)
         int i = 3 * (k / 3) + (p / 3);
                      ^
sudoku.c:94:32: error: ‘p’ undeclared (first use in this function)
         int i = 3 * (k / 3) + (p / 3);
                                ^
Compilation failed
8fcc626
